--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html>
 <head>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-
-
 </head>
 <body>
 
-
+	<img src="/static/ayakotatsu.jpg"/>
 	
 </body>
 </html>
